@@ -29,4 +29,4 @@ requires:
   perl: 5.008002
 resources:
   license: http://opensource.org/licenses/gpl-license.php
-version: 0.68
+version: 0.69
