@@ -7,7 +7,7 @@ use strict;
 
 BEGIN
    {
-   plan tests => 152;
+   plan tests => 157;
    chdir 't' if -d 't';
    use lib '../lib';
    use_ok ("Graph::Easy") or die($@);
@@ -674,3 +674,30 @@ print $grviz;
 unlike ($grviz, qr/style=.*dashed/, "no dashed in output");
 unlike ($grviz, qr/peripheries/, "no peripheries in output");
 
+#############################################################################
+# subgraph
+
+#$graph = Graph::Easy->new();
+my $g  = Graph::Easy->new;
+my $a_  = $g->add_group('A');
+my $b_  = $g->add_group('B');
+my $c  = $g->add_group('C');
+my $d  = $g->add_group('D');
+my $n1 = $g->add_node('one');
+my $n2 = $g->add_node('two');
+my $n3 = $g->add_node('three');
+my $n4 = $g->add_node('four');
+
+$a_->add_member($n1);
+$b_->add_member($c);
+$b_->add_member($n2);
+$a_->add_member($b_);
+$c->add_member($n3);
+$d->add_member($n4);
+
+$grviz = $g->as_graphviz();
+is($a_->{_order},1,'subgraph A is level 1');
+is($d->{_order},1,'subgraph D is level 1');
+is($b_->{_order},2,'subgraph B is level 2');
+is($c->{_order},3,'subgraph C is level 3');
+like($grviz,qr/subgraph "cluster\d+" {\n  label="A";\n    subgraph "cluster\d+" {/,'subgraph indent');
